[package]
name = "simple-test-bbarekas"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = ["bbarekas <bbarekas@gmail.com>"]
description = "a simple webserver."
repository = "https://github.com/bbarekas/simple-test-bbarekas"
readme = "README.md"
categories = ["web-programming"]

[badges]
travis-ci = { repository = "bbarekas/simple-test-bbarekas" }

[dependencies]
http = "0.1.21"
httparse = "1.3.4"
log = "0.4.11"
num_cpus = "1"
scoped_threadpool = "0.1.7"
time = "0.1.44"

[dev-dependencies]
env_logger = "0.8.1"
